--- a/learning_log/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_log/learning_logs/templates/learning_logs/new_topic.html
@@ -1,11 +1,18 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+    <h2>Add new topic</h2>
+{% endblock header %}
+
 {% block content %}
-    <p>Add a new topic:</p>
-    <form action="{% url 'learning_logs:new_topic' %}" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button name="Submit">Add Topic</button>
+
+    <form action="{% url 'learning_logs:new_topic' %}" method="post" class="form">
+{% csrf_token %}
+        {% bootstrap_form form %}
+
+        {% buttons %}
+            <button name="submit" class="btn btn-primary">Add topic</button>
+        {% endbuttons %}
     </form>
-
-
 {% endblock content %}
